--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,9 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+/COURSE/CameraDemonstration01/*.csproj
+/COURSE/CameraDemonstration01/*.pidb
+/COURSE/CameraDemonstration01/*.sln
+/COURSE/CameraDemonstration01/Library/metadata
+/COURSE/CameraDemonstration01/Library/ScriptAssemblies
+/COURSE/CameraDemonstration01/*.userprefs
