set ignore implement MainCharacterController01.cs

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ UpgradeLog*.XML
 /COURSE/CameraDemonstration01/Library/metadata
 /COURSE/CameraDemonstration01/Library/ScriptAssemblies
 /COURSE/CameraDemonstration01/*.userprefs
+/COURSE/CameraDemonstration01/Temp
