--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,5 @@ UpgradeLog*.XML
 /COURSE/MinmapManager01/Library/ScriptAssemblies
 /COURSE/MinmapManager01/*.sln
 /COURSE/MinmapManager01/*.csproj
+/COURSE/MinmapManager01/*.pidb
+/COURSE/MinmapManager01/*.userprefs
