--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ UpgradeLog*.XML
 /COURSE/LevelGeneration01/Library/metadata
 /COURSE/LevelGeneration01/*.userprefs
 /COURSE/LevelGeneration01/*.pidb
+/COURSE/LevelGeneration01/Temp
