rename FindAverageFromObjects.unity to FindAverageFromObjects01.unity add FindAverageFromObjects02.unity

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,4 @@ UpgradeLog*.XML
 /COURSE/TransformDemonstration01/*.userprefs
 /COURSE/TransformDemonstration01/Library/ScriptAssemblies
 /COURSE/TransformDemonstration01/Library/metadata
+/COURSE/TransformDemonstration01/Temp
