--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,19 @@ UpgradeLog*.XML
 /COURSE/GUITexture01/*.sln
 /COURSE/GUITexture01/*.pidb
 /COURSE/GUITexture01/*.userprefs
+/COURSE/LevelGeneration01_Empty/*.csproj
+/COURSE/LevelGeneration01_Empty/*.pidb
+/COURSE/LevelGeneration01_Empty/*.csproj
+/COURSE/LevelGeneration01_Empty/*.sln
+/COURSE/LevelGeneration01_Empty/*.userprefs
+/COURSE/LevelGeneration01_Empty/*.sln
+/COURSE/LevelGeneration01_Empty/Library/ScriptAssemblies
+/COURSE/LevelGeneration01_Empty/Library/metadata
+/COURSE/Prototype01_Empty/*.csproj
+/COURSE/Prototype01_Empty/*.pidb
+/COURSE/Prototype01_Empty/*.csproj
+/COURSE/Prototype01_Empty/*.sln
+/COURSE/Prototype01_Empty/*.userprefs
+/COURSE/Prototype01_Empty/*.sln
+/COURSE/Prototype01_Empty/Library/ScriptAssemblies
+/COURSE/Prototype01_Empty/Library/metadata
