set ignore, rename doc file to DOCUMENTATION/AssetsBundle01/reference.txt add DOCUMENTATION/AssetsBundle01/Unity 3D--外部加载资源AssetBundles - 脚本百事通.htm

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,12 @@ UpgradeLog*.XML
 /COURSE/Prototype01_Empty/*.sln
 /COURSE/Prototype01_Empty/Library/ScriptAssemblies
 /COURSE/Prototype01_Empty/Library/metadata
+/COURSE/AssetTest/*.csproj
+/COURSE/AssetTest/*.csproj
+/COURSE/AssetTest/*.csproj
+/COURSE/AssetTest/*.sln
+/COURSE/AssetTest/*.sln
+/COURSE/AssetTest/*.csproj
+/COURSE/AssetTest/Temp
+/COURSE/AssetTest/Library/ScriptAssemblies
+/COURSE/AssetTest/Library/metadata
