--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,4 @@ UpgradeLog*.XML
 /COURSE/CollisionDemonstration01/Temp
 /COURSE/CollisionDemonstration01/Library/metadata
 /COURSE/CollisionDemonstration01/Library/ScriptAssemblies
+/COURSE/GUITexture01/Temp
