--- a/.gitignore
+++ b/.gitignore
@@ -318,3 +318,18 @@ UpgradeLog*.XML
 /COURSE/Skybox01_Empty/*.userprefs
 /COURSE/Skybox01_Empty/*.pidb
 /COURSE/Skybox01_Empty/*.pidb
+/COURSE/Skybox02/*.pidb
+/COURSE/Skybox02/*.pidb
+/COURSE/Skybox02/*.userprefs
+/COURSE/Skybox02_Empty/Library/ScriptAssemblies
+/COURSE/Skybox02_Empty/Library/metadata
+/COURSE/Skybox02_Empty/Temp
+/COURSE/Skybox02_Empty/*.csproj
+/COURSE/Skybox02_Empty/*.csproj
+/COURSE/Skybox02_Empty/*.csproj
+/COURSE/Skybox02_Empty/*.csproj
+/COURSE/Skybox02_Empty/*.sln
+/COURSE/Skybox02_Empty/*.sln
+/COURSE/Skybox02_Empty/*.pidb
+/COURSE/Skybox02_Empty/*.pidb
+/COURSE/Skybox02_Empty/*.userprefs
