--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,10 @@ UpgradeLog*.XML
 /COURSE/Skybox02_Empty/*.userprefs
 /COURSE/CollisionDemonstration02/Library/ScriptAssemblies
 /COURSE/CollisionDemonstration02/Library/metadata
+/COURSE/CollisionDemonstration02/*.csproj
+/COURSE/CollisionDemonstration02/*.csproj
+/COURSE/CollisionDemonstration02/*.csproj
+/COURSE/CollisionDemonstration02/*.csproj
+/COURSE/CollisionDemonstration02/*.sln
+/COURSE/CollisionDemonstration02/*.sln
+/COURSE/CollisionDemonstration02/Temp
