--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,6 @@ UpgradeLog*.XML
 /COURSE/CollisionDemonstration02/*.pidb
 /COURSE/CollisionDemonstration02/*.pidb
 /COURSE/CollisionDemonstration02/*.userprefs
+/COURSE/CollisionDemonstration03/Temp
+/COURSE/CollisionDemonstration03/Library/ScriptAssemblies
+/COURSE/CollisionDemonstration03/Library/metadata
