--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,11 @@ UpgradeLog*.XML
 /COURSE/CollisionDemonstration05/Temp
 /COURSE/CollisionDemonstration05/Library/ScriptAssemblies
 /COURSE/CollisionDemonstration05/Library/metadata
+/COURSE/CollisionDemonstration05/*.csproj
+/COURSE/CollisionDemonstration05/*.csproj
+/COURSE/CollisionDemonstration05/*.sln
+/COURSE/CollisionDemonstration05/*.sln
+/COURSE/CollisionDemonstration05/*.pidb
+/COURSE/CollisionDemonstration05/*.userprefs
+/COURSE/CollisionDemonstration04/*.userprefs
+/COURSE/CollisionDemonstration04/*.pidb
