--- a/.gitignore
+++ b/.gitignore
@@ -472,3 +472,4 @@ UpgradeLog*.XML
 /COURSE/Prototype04_Empty/*.pidb
 /COURSE/Prototype04_Empty/Library/ScriptAssemblies
 /COURSE/Prototype04_Empty/Library/metadata
+/COURSE/Prototype04_Empty/Temp
