--- a/.gitignore
+++ b/.gitignore
@@ -473,3 +473,4 @@ UpgradeLog*.XML
 /COURSE/Prototype04_Empty/Library/ScriptAssemblies
 /COURSE/Prototype04_Empty/Library/metadata
 /COURSE/Prototype04_Empty/Temp
+/COURSE/GUITexture03/Temp
