--- a/.gitignore
+++ b/.gitignore
@@ -474,3 +474,11 @@ UpgradeLog*.XML
 /COURSE/Prototype04_Empty/Library/metadata
 /COURSE/Prototype04_Empty/Temp
 /COURSE/GUITexture03/Temp
+/COURSE/LevelLoad01/*.sln
+/COURSE/LevelLoad01/*.sln
+/COURSE/LevelLoad01/*.csproj
+/COURSE/LevelLoad01/*.csproj
+/COURSE/LevelLoad01/*.pidb
+/COURSE/LevelLoad01/*.userprefs
+/COURSE/LevelLoad01/Library/ScriptAssemblies
+/COURSE/LevelLoad01/Library/metadata
