add slow motion

--- a/.gitignore
+++ b/.gitignore
@@ -509,3 +509,4 @@ UpgradeLog*.XML
 /COURSE/CutSceneCamera01/*.userprefs
 /COURSE/CutSceneCamera01/Library/ScriptAssemblies
 /COURSE/CutSceneCamera01/Library/metadata
+/COURSE/CutSceneCamera01/Temp
