--- a/.gitignore
+++ b/.gitignore
@@ -528,3 +528,5 @@ UpgradeLog*.XML
 /COURSE/GUIDemonstration05/*.pidb
 /COURSE/GUIDemonstration05/*.userprefs
 /COURSE/EventManager01/Temp
+/COURSE/GUIDemonstration04/Library/ScriptAssemblies
+/COURSE/GUIDemonstration04/Library/metadata
