implement cs files for 2DGameplayTutorialProject

--- a/.gitignore
+++ b/.gitignore
@@ -530,3 +530,18 @@ UpgradeLog*.XML
 /COURSE/EventManager01/Temp
 /COURSE/GUIDemonstration04/Library/ScriptAssemblies
 /COURSE/GUIDemonstration04/Library/metadata
+/DEPENDENCY/2DGameplayTutorialProject/*.pidb
+/DEPENDENCY/2DGameplayTutorialProject/*.unityproj
+/DEPENDENCY/2DGameplayTutorialProject/*.unityproj
+/DEPENDENCY/2DGameplayTutorialProject/*.unityproj
+/DEPENDENCY/2DGameplayTutorialProject/*.unityproj
+/DEPENDENCY/2DGameplayTutorialProject/*.pidb
+/DEPENDENCY/2DGameplayTutorialProject/*.csproj
+/DEPENDENCY/2DGameplayTutorialProject/*.csproj
+/DEPENDENCY/2DGameplayTutorialProject/*.pidb
+/DEPENDENCY/2DGameplayTutorialProject/*.sln
+/DEPENDENCY/2DGameplayTutorialProject/*.sln
+/DEPENDENCY/2DGameplayTutorialProject/*.csproj
+/DEPENDENCY/2DGameplayTutorialProject/*.csproj
+/DEPENDENCY/2DGameplayTutorialProject/*.userprefs
+/DEPENDENCY/2DGameplayTutorialProject/*.pidb
