imeplement project AssetBundle01

--- a/.gitignore
+++ b/.gitignore
@@ -575,3 +575,14 @@ UpgradeLog*.XML
 /COURSE/Prototype05/Library/ScriptAssemblies
 /COURSE/ArtificialIntelligence01/*.userprefs
 /COURSE/ArtificialIntelligence01/*.pidb
+/COURSE/AssetBundle01/*.csproj
+/COURSE/AssetBundle01/*.csproj
+/COURSE/AssetBundle01/*.csproj
+/COURSE/AssetBundle01/*.csproj
+/COURSE/AssetBundle01/*.sln
+/COURSE/AssetBundle01/*.sln
+/COURSE/AssetBundle01/*.pidb
+/COURSE/AssetBundle01/*.pidb
+/COURSE/AssetBundle01/*.userprefs
+/COURSE/AssetBundle01/Library/metadata
+/COURSE/AssetBundle01/Library/ScriptAssemblies
