move StageBoard.prefab to Resources/StageBoard.prefab add TripleTao/Assets/Editor/TripleTaoEditorWindow.cs

--- a/.gitignore
+++ b/.gitignore
@@ -649,3 +649,7 @@ UpgradeLog*.XML
 /COURSE/Shadow01/*.csproj
 /COURSE/Shadow01/*.sln
 /COURSE/Shadow01/*.sln
+/COURSE/TripleTao/*.csproj
+/COURSE/TripleTao/*.csproj
+/COURSE/TripleTao/*.sln
+/COURSE/TripleTao/*.sln
