--- a/.gitignore
+++ b/.gitignore
@@ -667,3 +667,4 @@ UpgradeLog*.XML
 /COURSE/MovieTexture01/Library/metadata
 /COURSE/MovieTexture01/Library/ScriptAssemblies
 /COURSE/Water02/Temp
+/COURSE/RenderToTexture01/Temp
