set ignore add code to prevent resource load for wrong type

--- a/.gitignore
+++ b/.gitignore
@@ -679,3 +679,4 @@ UpgradeLog*.XML
 /COURSE/AssetBundle02/*.unity3d
 /COURSE/AssetBundle02/Library/ScriptAssemblies
 /COURSE/AssetBundle02/Library/metadata
+/COURSE/AssetBundle02/Temp
