--- a/.gitignore
+++ b/.gitignore
@@ -680,3 +680,5 @@ UpgradeLog*.XML
 /COURSE/AssetBundle02/Library/ScriptAssemblies
 /COURSE/AssetBundle02/Library/metadata
 /COURSE/AssetBundle02/Temp
+/COURSE/KandyCrusher/Library/metadata
+/COURSE/KandyCrusher/Library/ScriptAssemblies
